# EchoCity

./: EchoCity_NPC_Bible.md  LICENSE  README.md
deliverables/: ARCHITECTURE.md  README.md  (+5 more)
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/: __init__.py
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/agents/: agent.py
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/bootstrap/: seeded_agents.json
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/conversation/: conversation.py  conversation_engine.py  gossip_engine.py
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/core/: __init__.py  app_factory.py  config.py  dependencies.py
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/court/: case_file.py  evidence_manager.py
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/database/: models.py
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/events/: event.py
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/app/higher_self/: influence_result.py
newpushes-files/newcommit/osdHack that one commit 1/the-main-backend/backend/tests/: test_case_file.py  test_clock.py  test_higher_influence.py  test_location.py  test_parser.py
(+218 files in other folders)
